improve spanned layout